Fix buttons in header not working due to z-index

--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,7 @@ header {
   background-repeat: no-repeat;
   background: url("./images/back8.webp");
   background-size: 100%; 
+  z-index: 4;
 }
 
 header div.head {
